bitfields/tests/compile_error_cases/errors/bitfield_negative_field_bits.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    #[bits(-1)]
    a: u32,
}

fn main() {}
